# general-aggregators

./: .dockerignore  .env.local  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
config/: settings.py
src/: action.py  content.py  main.py  queue.py  queue_store.py  settings_store.py
src/processor/: __init__.py  base.py  text.py
